[pom] Add arg line items that hazelcast warned about